// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should be work with content 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><span class=\\"nextui-input-content\\"><span>test-icon</span><style>
        .nextui-input-content {
          box-sizing: content-box;
          display: flex;
          width: calc(2 * 1.25rem * .42);
          height: 100%;
          align-items: center;
          vertical-align: center;
          margin: 0;
          padding: 0 calc(2 * 1.25rem * .3);
          color: #333;
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span><input type=\\"text\\" id=\\"nextui-input-6tc5194l\\" class=\\"nextui-input nextui-input-left-content\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-d5hpnud5\\" class=\\"nextui-input nextui-input-nextui-input-right-content\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"><span class=\\"nextui-input-content\\"><span>test-icon</span><style>
        .nextui-input-content {
          box-sizing: content-box;
          display: flex;
          width: calc(2 * 1.25rem * .42);
          height: 100%;
          align-items: center;
          vertical-align: center;
          margin: 0;
          padding: 0 calc(2 * 1.25rem * .3);
          color: #333;
          line-height: 1;
          position: relative;
          cursor: default;
          pointer-events: none;
        }
      </style></span></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;

exports[`Input should be work with label 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><label id=\\"nextui-input-label-sgeo38fl\\" class=\\"next-input-block-label\\" for=\\"nextui-input-sgeo38fl\\">label<style>
        .next-input-block-label {
          display: block;
          font-weight: normal;
          color: #000;
          padding: 0 0 0 4px;
          margin-bottom: calc(0.75rem * 0.5);
          font-size: .875rem;
          line-height: 1.5;
          -webkit-touch-callout: none; /* iOS Safari */
          -webkit-user-select: none; /* Safari */
          -khtml-user-select: none; /* Konqueror HTML */
          -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
          user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
        }
        .next-input-block-label > :global(*:first-child) {
          margin-top: 0;
        }
        .next-input-block-label > :global(*:last-child) {
          margin-bottom: 0;
        }
        .next-input-block-label.next-input-block-label-rounded {
          padding: 0 0 0 calc(0.75rem * 0.5);
        }
        .next-input-block-label-as-placeholder {
          position: absolute;
          padding: 0;
          z-index: 1;
          left: 12px;
          top: 20%;
          margin-bottom: 0;
          cursor: text;
          transition: left 0.25s ease 0s, color 0.25s ease 0s, top 0.25s ease 0s;
          color: #999;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-underlined {
          left: 4px;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-has-content-left {
          left: calc(12px + 2 * 1.25rem * 0.64);
        }
        .next-input-block-label-as-placeholder.next-input-block-label-hover,
          .next-input-block-label-as-placeholder.next-input-block-label-with-value {
          color: #000;
          top: -72%;
          left: 4px;
          cursor: inherit;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-is-textarea {
          top: 10px;
        }
        .next-input-block-label-as-placeholder.next-input-block-label-is-textarea.next-input-block-label-hover,
          .next-input-block-label-as-placeholder.next-input-block-label-is-textarea.next-input-block-label-with-value {
          top: -28px;
        }
      </style></label><div class=\\"nextui-input-container nextui-input-container-input\\"><div class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-sgeo38fl\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" aria-labelledby=\\"nextui-input-label-sgeo38fl\\" value=\\"\\"></div></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-ovtoia8p\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"><span class=\\"nextui-input-label nextui-input-label-right\\">label<style>
        .nextui-input-label {
          position: relative;
          display: inline-flex;
          width: initial;
          height: 100%;
          font-weight: 500;
          align-items: center;
          pointer-events: none;
          margin: 0;
          background: rgba(153, 153,153,0.3);
          padding: 0 0.75rem;
          color: #999;
          font-size: .875rem;
          line-height: 1;
        }
        .nextui-input-label-right {
          border-top-right-radius: 12px;
          border-bottom-right-radius: 12px;
        }
        .nextui-input-label-left {
          border-top-left-radius: 12px;
          border-bottom-left-radius: 12px;
        }
        .nextui-input-label-underlined.left:after,
          .nextui-input-label-underlined.right:before {
          position: absolute;
          content: '';
          height: 70%;
          top: 15%;
          bottom: 0;
          width: calc(0px / 2);
          box-shadow: 0 2px 4px 0px rgb(0 0 0 / 8%);
          background: #999;
        }
        .nextui-input-label-underlined.nextui-input-label-left:after {
          right: 0;
        }
        .nextui-input-label-underlined.nextui-input-label-right:before {
          left: 0;
        }
        .nextui-input-label-bordered:after, .nextui-input-label-bordered:before {
          display: none;
        }
      </style></span></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><span class=\\"nextui-input-label nextui-input-label-left\\">label<style>
        .nextui-input-label {
          position: relative;
          display: inline-flex;
          width: initial;
          height: 100%;
          font-weight: 500;
          align-items: center;
          pointer-events: none;
          margin: 0;
          background: rgba(153, 153,153,0.3);
          padding: 0 0.75rem;
          color: #999;
          font-size: .875rem;
          line-height: 1;
        }
        .nextui-input-label-right {
          border-top-right-radius: 12px;
          border-bottom-right-radius: 12px;
        }
        .nextui-input-label-left {
          border-top-left-radius: 12px;
          border-bottom-left-radius: 12px;
        }
        .nextui-input-label-underlined.left:after,
          .nextui-input-label-underlined.right:before {
          position: absolute;
          content: '';
          height: 70%;
          top: 15%;
          bottom: 0;
          width: calc(0px / 2);
          box-shadow: 0 2px 4px 0px rgb(0 0 0 / 8%);
          background: #999;
        }
        .nextui-input-label-underlined.nextui-input-label-left:after {
          right: 0;
        }
        .nextui-input-label-underlined.nextui-input-label-right:before {
          left: 0;
        }
        .nextui-input-label-bordered:after, .nextui-input-label-bordered:before {
          display: none;
        }
      </style></span><input type=\\"text\\" id=\\"nextui-input-kbkma0gu\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;

exports[`Input should work with different sizes 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-8mkuao92\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 7px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 7px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(1.2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 7px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .75rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-eefmtt4l\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 9px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 9px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(1.6 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 9px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(1.6 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .75rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-knl4m9tp\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 14px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 14px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2.2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 14px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2.2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: 1rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-ethcaghf\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 15px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 15px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2.6 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 15px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2.6 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: 1.25rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-gite1b34\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: 50%;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;

exports[`Input should work with different status 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-h2709tlc\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #7928ca;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #7928ca;
            box-shadow: 0 0 0 0px
              #7928ca;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-ge6qa7ri\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #17c964;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #17c964;
            box-shadow: 0 0 0 0px
              #17c964;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-input\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow input-wrapper\\"><input type=\\"text\\" id=\\"nextui-input-mtl9qu6i\\" class=\\"nextui-input\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"false\\" value=\\"\\"></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #f5a623;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #f5a623;
            box-shadow: 0 0 0 0px
              #f5a623;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div></div>"
`;
